precompiles/macro/tests/compile-fail/precompile/codec/output-wrong-error-result.stderr
error[E0277]: `?` couldn't convert the error to `PrecompileFailure`
  --> tests/compile-fail/precompile/codec/output-wrong-error-result.rs:27:63
   |
27 |     fn foo(test: &mut impl PrecompileHandle) -> Result<(), String> {
   |                                                 -----------------^
   |                                                 |                |
   |                                                 |                the trait `From<String>` is not implemented for `PrecompileFailure`
   |                                                 this can't be annotated with `?` because it has type `Result<_, String>`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
help: the following other types implement trait `From<T>`
  --> $WORKSPACE/precompiles/src/solidity/revert.rs
   |
   | impl From<Revert> for PrecompileFailure {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PrecompileFailure` implements `From<precompile_utils::prelude::Revert>`
...
   | impl From<RevertReason> for PrecompileFailure {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PrecompileFailure` implements `From<RevertReason>`
   |
  ::: /Users/elois/.cargo/git/checkouts/evm-68527307cd9f9c23/a656db9/src/executor/stack/precompile.rs:30:1
   |
30 | impl From<ExitError> for PrecompileFailure {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PrecompileFailure` implements `From<ExitError>`
   |
  ::: $WORKSPACE/precompiles/src/substrate.rs
   |
   | impl From<TryDispatchError> for PrecompileFailure {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PrecompileFailure` implements `From<TryDispatchError>`

warning: unused variable: `test`
  --> tests/compile-fail/precompile/codec/output-wrong-error-result.rs:27:9
   |
27 |     fn foo(test: &mut impl PrecompileHandle) -> Result<(), String> {
   |            ^^^^ help: if this is intentional, prefix it with an underscore: `_test`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
